fix(md-enhance): fix code tab style on mobile

--- a/packages/md-enhance/src/client/styles/code-tabs.scss
+++ b/packages/md-enhance/src/client/styles/code-tabs.scss
@@ -110,6 +110,7 @@
 
     @media (max-width: hope-config.$mobile) {
       margin: 0.85rem -1.5rem;
+      border-radius: 0;
     }
 
     code {
